# Pixels

./: CMakeLists.txt
include/: Canvas.hpp
src/: Canvas.cpp  main.cpp
